attempt to get a working hybrid version of the algorithm (with less communication), but also tried to improve all kind of things in amfsmall

--- a/WV-Dedekind/.classpath
+++ b/WV-Dedekind/.classpath
@@ -12,5 +12,6 @@
 			<attribute name="javadoc_location" value="file:/Users/PieterJan/Downloads/openmpi-1.8.3/ompi/mpi/java/java/doc/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/PieterJan/Downloads/fst-2.24/lib/fst-2.24.jar" sourcepath="/Users/PieterJan/Downloads/fst-2.24/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
